V 0.5.0:
  - Added capability to log to files easily
  - Added silent option
V 0.4.6:
  - Added option to remove trailing zeroes from human_readable_bytes function
V 0.4.5:
  - Added function to convert an amount of bytes into a human-readable string
V 0.4.4:
  - Added default parameter to commalist prompt
V 0.4.3:
  - Added create_file function
V 0.4.2:
  - Fixed issues with comma list prompts giving empty strings
V 0.4.1:
  - Added more prompt functions
V 0.4.0:
  - Added graphql class
  - Added option for logging to cli_start
  - Added pprint functionality
  - Added prompt functions
  - Added function to sanitize file names
V 0.3.1:
  - Added puffotter.os.listdir
  - Added CLI starting helpers
  - Added unit conversion module
V 0.3.0:
  - Added listdir function
  - Added unit tests
  - Uses docker for CI
V 0.2.0:
  - Reboot of the project
  - Added cryptographic functions
V 0.1.8:
  - Added SQLite 3 Database existence checker
V 0.1.7:
  - Fixed python 2 distribution
V 0.1.6:
  - Added support for separate python 2 / 3 distributions
V 0.1.5:
  - Added interactive CLI template class
  - Added methods to ensure files/directories exist
V 0.1.1:
  - Fixed setuptools configuration
V 0.1.0:
  - Implemented basic file operation methods
  - Implemented byte string converter
  - Initial project structure